static/css/apps/tasks.css
/* ... */
tr.importance-7 > td.importance .button-link,
i.importance-7,
tr.importance-6 > td.importance .button-link,
i.importance-6 {
  color: var(--red-600);
}

tr.importance-5 > td.importance .button-link,
i.importance-5 {
  color: var(--violet-600);
}

tr.importance-3 > td.importance .button-link,
i.importance-3 {
  color: var(--slate-400);
}

tr.importance-2 > td.importance .button-link,
i.importance-2 {
  color: var(--slate-500);
}

tr.importance-1 > td.importance .button-link,
i.importance-1 {
  color: var(--slate-600);
}

tr > td.importance.complete .button-link {
  color: var(--color-muted-more);
}

/* ==========================================================================
 Shared Styles
========================================================================== */

.filter-tools .return-to-agenda {
  color: var(--link);
}

.filter-tools .return-to-agenda:hover {
  color: var(--link-hover);
}

/* ==========================================================================
 Task Notes
========================================================================== */

.task-description {
  margin-bottom: 0.5rem;
}

.task-note {
  border-bottom: solid 1px var(--border-medium);
  padding: 1rem 0 1rem 0.5rem;
}

.task-note:first-child {
  border-top: solid 1px var(--border-medium);
}

.task-note-title {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.task-note-title-left {
  align-items: center;
  display: flex;
}

.task-note-date-time {
  margin-right: 1rem;
}

.task-note-username {
  color: var(--color-muted);
  margin-right: 1rem;
}

/* Markdown styling for task notes */
.task-note-details h1 {
  font-size: 1.5em;
  font-weight: 600;
}

.task-note-details h2 {
  font-size: 1.25em;
  font-weight: 600;
}

.task-note-details h3 {
  font-size: 1.125em;
  font-weight: 600;
}

.task-note-details strong {
  font-weight: 600;
}

.task-note-details ul {
  list-style-type: disc;
  margin: 0 0 0 1rem;
}

.task-note-details ol {
  list-style-type: decimal;
  margin: 0 0 0 1rem;
}

.task-note-details p {
  margin: 1rem 0 0 0.5rem;
}

.task-note-details p:first-child {
  margin-top: 0.5rem;
}

.task-note-details a {
  color: var(--link);
  text-decoration: underline;
}

.task-note-details a:hover {
  color: var(--link-hover);
}

.task-notes .empty-message {
  color: var(--color-muted);
  font-style: italic;
  padding: 1rem;
  text-align: center;
}

.task-note-form .char-counter {
  color: var(--color-muted);
  font-size: 0.875rem;
  margin-top: 0.25rem;
  text-align: left;
}

.importance-dropdown i.with-text {
  margin-right: 0.25rem;
}

/* ==========================================================================
 Tasks
========================================================================== */

.tasks-toolbar-left {
  flex-wrap: wrap-reverse;
  row-gap: 1.25rem;
}

.tasks-toolbar .filter-tools .filter-dropdown-button {
  max-width: 10rem;
  min-width: 4.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}


.tasks-add-quick-input {
  background: var(--background-light);
  color: var(--color-primary);
  padding-left: 1rem;
  width: 30rem;
}

.tasks-add-quick-input::placeholder {
  color: var(--border-medium);
}

@media (width <= 1200px) {
  .tasks-add-quick-input {
    display: none;
  }
}

.tasks-btn-status {
  color: var(--icon-muted);
}

.tasks-table .importance {
  text-align: center;
  width: 3rem;
}


.importance-arrow .icon-arrow-up-to-line {
  font-size: 0.9rem;
  left: 0.25rem;
  position: relative;
  top: 0;
}

.importance-text {
  position: relative;
  right: 1rem;
}

.tasks-table .importance i {
  /* margin: 0; */
}

.importance .btn-sort {
  margin: 0;
}

.tasks-table .importance .dropdown-menu {
  min-width: auto;
  text-align: left;
}

.tasks-table .matter {
  width: 15rem;
}

.tasks-table .description {
  min-width: 31.5rem;
  white-space: normal;
}

.tasks-table td.description {
  position: relative;
  padding-right: 3.5rem;
}

.tasks-table td.description > a:first-child {
  min-width: 0;
}

.task-decorators {
  position: absolute;
  right: 0.625rem;
  top: 0.625rem;
}

.tasks-table .status {
  width: 7rem;
}

.tasks-table .user {
  width: 7rem;
}

.tasks-table .date {
  overflow: visible;
  white-space: nowrap;
  width: 7rem;
}

.tasks-table .date .dropdown-menu {
  min-width: 2.75rem;
}


/* Fix dropdown overflow issues */
#tasks .table-container {
  overflow-x: auto;
  overflow-y: auto;
}

.tasks-table tbody {
  overflow: visible;
}

.tasks-table {
  min-width: 73rem;
  overflow: visible;
}

.tasks-table .date .empty-date-icon {
  color: var(--icon-muted);
  display: block;
  opacity: 0;
  transition: opacity 0.2s;
}

.tasks-table .date:hover .empty-date-icon {
  opacity: 1;
}

.task-date {
  background: none;
  border: none;
  cursor: pointer;
  font-size: inherit;
  margin: 0;
  padding: 0;
  width: 9rem;
}

/* Flatpickr calendar overrides */
.flatpickr-day {
  border-radius: var(--radius-sm);
}

.flatpickr-day.today:not(.selected) {
  border-color: var(--stone-300);
}

.flatpickr-day.today:not(.selected):hover {
  background: var(--stone-100);
  border-color: var(--stone-300);
}

.flatpickr-day.selected,
.flatpickr-day.selected:hover {
  background: var(--selected-background);
  border-color: var(--selected-border);
  color: var(--selected-color);
}

.flatpickr-calendar {
  background: var(--background-light);
  border-radius: var(--radius-sm);
}

.flatpickr-clear {
  background: inherit;
  border: 1px solid var(--border-medium);
  border-radius: var(--radius-sm);
  color: var(--color-primary);
  cursor: pointer;
  font-size: 0.9rem;
  margin: 0.5rem auto;
  padding: 0.25rem 0;
  width: 30%;
}

.flatpickr-clear:hover {
  /* opacity: 0.8; */
}


.tasks-table .menu {
  margin: 0;
  padding: 0;
  width: 0.75rem;
}

/* .tasks-table .complete, */
.tasks-table .complete > a,
.tasks-table .complete .button-link {
  color: var(--color-muted);
  text-decoration: line-through;
}
/* ... */

